fixed body from overflowing in page transitions

--- a/src/scss/global/_layout.scss
+++ b/src/scss/global/_layout.scss
@@ -2,6 +2,7 @@ body {
 	// background: #333;
 	// color: white;
 	margin-bottom: 5em;
+	overflow: hidden;
 }
 
 a, a:link, a:visited {
